# dotty_dict

./: .bumpversion.cfg  .editorconfig  .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.rst  pyproject.toml  requirements_dev.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.circleci/: config.yml
docs/: Makefile  api.rst  conf.py  examples.rst  index.rst  installation.rst  make.bat  usage.rst
docs/_templates/: layout.html
dotty_dict/: __init__.py  dotty_dict.py
example/: __init__.py  advanced.py  basics.py  customization.py
tests/: test_dotty_api.py  test_dotty_basics.py  test_dotty_cache.py  test_dotty_dict.py  test_dotty_pandas.py  test_dotty_value_access.py  test_examples.py  test_list_in_dotty.py  test_non_json_serilizables.py
