[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dotty_dict"
version = "1.3.0"
description = "Dictionary wrapper for quick access to deeply nested keys."
readme= "README.rst"
authors = ["Pawel Zadrozny <pawel.zny@gmail.com>"]
license = "MIT"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Topic :: Software Development',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy',
    'License :: OSI Approved :: MIT License',
]
packages = [
    {include = "dotty_dict"},
]

[tool.poetry.dependencies]
python = ">=3.5,<4.0"

[tool.poetry.dev-dependencies]
pytest = [
    {version = "7.1.2", python = ">=3.7"},
    {version = "4.0.0", python = ">=3.5,<3.7"},
]
tox = "3.25.1"
tox-pyenv = "1.1.0"
coverage = [
    {version = "6.4.1", python = ">=3.8"},
]
bump2version = "1.0.1"
Sphinx = [
    {version = "4.3.2", python = ">=3.8"},
]
sphinx-rtd-theme = [
    {version = "1.0.0", python = ">=3.8"},
]
flake9 = "3.8.3.post2"
flake8-bandit = [
    {version = "3.0.0", python = ">=3.8"},
]
flake8-bugbear = [
    {version = "22.7.1", python = ">=3.8"},
]
flake8-builtins = "1.5.3"
flake8-comprehensions = [
    {version = "3.10.0", python = ">=3.8"},
]
flake8-rst-docstrings = [
    {version = "0.2.6", python = ">=3.8"},
]

[tool.flake8]
max-line-length = 100
max-complexity = 10
statistics = true
ignore = ["B101", "E501"]
select = ["B", "B902", "B950", "C", "E", "F", "G", "H", "I", "N", "RST", "W"]
exclude = [".eggs", "docs", "setup.py", ".tox", ".venv"]

[tool.pytest.ini_options]
addopts = "-rx -s --verbose"
testpaths = ["tests"]
